
2020-01-02 Franz Holzinger <franz@ttproducts.de>
    * new feature: DEVLOG now means to activate any devLog, because I always have expected this. DEVLOGDEBUG is for the fh_debug internal devLog.

2019-12-21 Franz Holzinger <franz@ttproducts.de>
    * bugfix: after the </body> end tag also the </html> end tag shall follow automatically
    * bugfix: <br /> tags are invalid inside of headers

2019-11-25 Franz Holzinger <franz@ttproducts.de>
    * compatibility TYPO3 9: Workaround for debugBegin and debugEnd. Use debug('B') and debug('E') instead.
    * insert a call_user_func into ext_localconf.php
    * add new debug function debug paramter: $group = null
    * remove the outdated debug function debug parameters:
        $line = '*line*', $file = '*file*', $recursiveDepth = 3, $debugLevel = 'E_DEBUG'
    * use $title instead of $name because of TYPO0 9.5 GlobalDebugFunctions.php

2019-07-31 Franz Holzinger <franz@ttproducts.de>
    * bugfix: The check for is_resource is not sufficient, because a closed resource returns false.

2019-07-04 Franz Holzinger <franz@ttproducts.de>
    * ready for TYPO3 9.5
    * no any more support for TYPO3 7
    * bugfix: JambageCom\\FhDebug\\Hooks\\CoreProductionExceptionHandler must not be used with $GLOBALS['TYPO3_CONF_VARS']['SYS']['Objects']['TYPO3\\CMS\\Core\\Error\\ProductionExceptionHandler'] because the Core Bootstrap does not support this. You must use the Install Tool to use this exception handler.

2019-03-18 Franz Holzinger <franz@ttproducts.de>
    * delay the trace array inversion. The index of the trace array shall start from 0 and increase continually.

2019-03-14 Franz Holzinger <franz@ttproducts.de>
    * bugfix to the new partfiles feature

2019-03-12 Franz Holzinger <franz@ttproducts.de>
    * new feature: partfiles give a list of files from which one must be included in the backtrace in order to generate a debug output
    * use new PHP feature: use the short call debug_backtrace(DEBUG_BACKTRACE_IGNORE_ARGS).